--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -9,9 +9,9 @@
 
     <!-- CSS -->
     <!-- load bootstrap from CDN and custom CSS -->
-    <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.1/paper/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.1/paper/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- JS -->
     <!-- load angular and angular-route via CDN -->
